# chatserver

./: .gitignore  Cargo.toml  README.md  build.sh  ws.html
docs/: ideas.txt  prompt.rs  prompts.txt  protocol.md  todo.txt
src/: data.rs  filemap.rs  main.rs
web/: index.html  main.js  package-lock.json  package.json  style.css  tailwind.config.js
web/js/: alert.js  main.js  pubsub.js  socket.js  ui.js
ws/: index.html  main.js
