[package]
name = "chatserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
fastwebsockets = { version = "0.6.0", features = ["upgrade"] }
hyper = "1.0.0"
hyper-util = "0.1.2"
async-openai = "0.17.1"
anyhow = "1.0.78"
http-body-util = "0.1.0"
