[package]
name = "chatserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
fastwebsockets = { version = "0.7.0", features = ["upgrade"] }
futures = "0.3.30"
hyper = "1.2.0"
async-openai = "0.19.0"
hyper-util = "0.1.3"
http-body-util = "0.1.0"
anyhow = "1.0.8"
